Add advanced search page with optional filters, pagination, keyword vs text differentiation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="container">
         <header>
             <h1>Magic: The Gathering Deck Builder</h1>
+            <div style="text-align: center; margin: 15px 0;">
+                <a href="advanced-search.html" class="advanced-search-link">🔍 Advanced Card Search</a>
+            </div>
             <div id="authSection" class="auth-section">
                 <div id="userInfo" class="user-info" style="display: none;">
                     <span id="userName"></span>
