Integrate deck builder with advanced search: add cards directly, show deck count, format validation

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -13,6 +13,9 @@
             <h1>Advanced Card Search</h1>
             <div class="header-actions">
                 <a href="index.html" class="back-btn">← Back to Deck Builder</a>
+                <div id="deckInfo" class="deck-info-header">
+                    <span id="deckCardCount">0 cards in deck</span>
+                </div>
             </div>
         </header>
 
