Add deck finder wizard for new players

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Magic: The Gathering Deck Builder</h1>
             <div style="text-align: center; margin: 15px 0;">
                 <a href="advanced-search.html" class="advanced-search-link">🔍 Advanced Card Search</a>
+                <a href="deck-finder.html" class="deck-finder-link">❓ I DON'T KNOW WHAT I'M DOING!</a>
             </div>
             <div id="authSection" class="auth-section">
                 <div id="userInfo" class="user-info" style="display: none;">
