--- a/index.html
+++ b/index.html
@@ -184,11 +184,16 @@
                 <div class="deck-sort-controls">
                     <label for="deckSortSelect">Sort by:</label>
                     <select id="deckSortSelect" class="sort-dropdown">
-                        <option value="name">Card Name</option>
-                        <option value="cmc">Mana Cost</option>
-                        <option value="type">Card Type</option>
-                        <option value="quantity">Quantity</option>
-                        <option value="price">Price</option>
+                        <option value="name-asc">Card Name (A-Z)</option>
+                        <option value="name-desc">Card Name (Z-A)</option>
+                        <option value="cmc-asc">Mana Cost (Low to High)</option>
+                        <option value="cmc-desc">Mana Cost (High to Low)</option>
+                        <option value="type-asc">Card Type (A-Z)</option>
+                        <option value="type-desc">Card Type (Z-A)</option>
+                        <option value="quantity-desc">Quantity (High to Low)</option>
+                        <option value="quantity-asc">Quantity (Low to High)</option>
+                        <option value="price-desc">Price (High to Low)</option>
+                        <option value="price-asc">Price (Low to High)</option>
                     </select>
                 </div>
                 <div id="deckList" class="deck-list">
