Add default sort option to preserve original order - no auto-alphabetical sorting

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -155,6 +155,7 @@
                         <div class="sort-controls" style="display: none;">
                             <label for="searchSortSelect">Sort by:</label>
                             <select id="searchSortSelect" class="sort-dropdown">
+                                <option value="default">Scryfall Order</option>
                                 <option value="name-asc">Card Name (A-Z)</option>
                                 <option value="name-desc">Card Name (Z-A)</option>
                                 <option value="cmc-asc">Mana Cost (Low to High)</option>
