--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                 <div class="deck-sort-controls">
                     <label for="deckSortSelect">Sort by:</label>
                     <select id="deckSortSelect" class="sort-dropdown">
+                        <option value="default">Order Added</option>
                         <option value="name-asc">Card Name (A-Z)</option>
                         <option value="name-desc">Card Name (Z-A)</option>
                         <option value="cmc-asc">Mana Cost (Low to High)</option>
