Complete visual redesign: Convert entire application to Retro Newspaper (Style 3) theme
- Redesigned all 6+ CSS files with vintage newspaper aesthetic
- Changed from dark MTG theme to sepia newspaper style (#f5f1e8 bg, #2c2416 text)
- Replaced rounded corners with sharp edges, gradients with solid colors
- Implemented hard offset shadows (5px 5px) instead of soft shadows
- Applied serif typography (Georgia, Times New Roman) throughout
- Added newspaper-style borders (3-4px solid/double), drop caps on headers
- Updated index.html structure for newspaper article-style layout
- Converted magicdeckbuilder.css (1600+ lines): MTG deck builder to newspaper theme
- Converted tarkov.css (400+ lines): Tarkov database to newspaper sections
- Converted deadlock.css (270+ lines): Patch notes to newspaper articles
- Converted advanced-search.css (550+ lines): Advanced filters to classified ads style
- Converted deck-finder.css (580+ lines): Deck wizard to newspaper guide format
- Created 3 alternative style demos (Modern Minimalist, Cyberpunk Neon, Retro Newspaper)
- All functionality preserved, only visual presentation changed

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Card Search - MTG Deck Builder</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="magicdeckbuilder.css">
     <link rel="stylesheet" href="advanced-search.css">
 </head>
 <body>
@@ -12,7 +12,8 @@
         <header>
             <h1>Advanced Card Search</h1>
             <div class="header-actions">
-                <a href="index.html" class="back-btn">← Back to Deck Builder</a>
+                <a href="index.html" class="back-btn">🏠 Home</a>
+                <a href="magicdeckbuilder.html" class="back-btn">← Back to Deck Builder</a>
                 <div id="deckInfo" class="deck-info-header">
                     <span id="deckCardCount">0 cards in deck</span>
                 </div>
