--- a/deck-finder.html
+++ b/deck-finder.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Your Perfect Deck - MTG Deck Builder</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="magicdeckbuilder.css">
     <link rel="stylesheet" href="deck-finder.css">
 </head>
 <body>
@@ -13,7 +13,8 @@
             <h1>🎲 Find Your Perfect Deck!</h1>
             <p class="subtitle">Let us help you discover the perfect deck for your playstyle</p>
             <div class="header-actions">
-                <a href="index.html" class="back-btn">← Back to Deck Builder</a>
+                <a href="index.html" class="back-btn">🏠 Home</a>
+                <a href="magicdeckbuilder.html" class="back-btn">← Back to Deck Builder</a>
             </div>
         </header>
 
