--- a/demo-style1.html
+++ b/demo-style1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokey's Gamer Information Playground</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Style 1: Modern Minimalist - Pokey's Gamer Playground</title>
+    <link rel="stylesheet" href="index-style1.css">
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,7 @@
                 <div class="game-icon">🎴</div>
                 <div class="game-card-content">
                     <h2>Magic: The Gathering</h2>
-                    <p>Build and manage your MTG decks with our comprehensive deck builder featuring advanced search capabilities, deck management tools, and community features.</p>
+                    <p>Build and manage your MTG decks with our comprehensive deck builder</p>
                     <span class="game-status">✓ Full Featured</span>
                 </div>
             </a>
@@ -29,7 +29,7 @@
                 <div class="game-icon">🎯</div>
                 <div class="game-card-content">
                     <h2>Escape From Tarkov</h2>
-                    <p>Complete survival guide including interactive maps, high-value loot locations, quest tracking system, and comprehensive item database for hideout upgrades and trading.</p>
+                    <p>Maps, loot spots, quests, and item database for your survival needs</p>
                     <span class="game-status">🚧 In Development</span>
                 </div>
             </a>
@@ -39,7 +39,7 @@
                 <div class="game-icon">🔒</div>
                 <div class="game-card-content">
                     <h2>Deadlock</h2>
-                    <p>Stay updated with the latest patch notes, balance changes, and hero updates. Track all game modifications and improvements as they are released.</p>
+                    <p>Latest patch notes and game updates</p>
                     <span class="game-status">🚧 In Development</span>
                 </div>
             </a>
