--- a/demo-style3.html
+++ b/demo-style3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokey's Gamer Information Playground</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Style 3: Retro Newspaper - Pokey's Gamer Playground</title>
+    <link rel="stylesheet" href="index-style3.css">
 </head>
 <body>
     <div class="container">
