Add dark mode toggle to all pages
- Added dark mode toggle button (moon/sun icon) in top right corner
- Created dark-mode.js for toggle functionality with localStorage persistence
- Implemented dark mode styles for all 6 CSS files
- Dark mode uses inverted newspaper palette
- User preference saved in localStorage and persists across pages

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="advanced-search.css">
 </head>
 <body>
+    <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     <div class="container">
         <header>
             <h1>Advanced Card Search</h1>
@@ -189,6 +190,7 @@
         </div>
     </div>
 
+    <script src="dark-mode.js"></script>
     <script src="advanced-search.js"></script>
 </body>
 </html>
