--- a/deck-finder.html
+++ b/deck-finder.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="deck-finder.css">
 </head>
 <body>
+    <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     <div class="container">
         <header>
             <h1>🎲 Find Your Perfect Deck!</h1>
@@ -185,6 +186,7 @@
         </div>
     </div>
 
+    <script src="dark-mode.js"></script>
     <script src="deck-finder.js"></script>
 </body>
 </html>
