--- a/tarkov.html
+++ b/tarkov.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="tarkov.css">
 </head>
 <body>
+    <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     <div class="container">
         <header>
             <h1>Escape From Tarkov Database</h1>
@@ -238,6 +239,7 @@
         </footer>
     </div>
 
+    <script src="dark-mode.js"></script>
     <script src="tarkov.js"></script>
 </body>
 </html>
