--- a/deadlock.html
+++ b/deadlock.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="deadlock.css">
 </head>
 <body>
+    <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     <div class="container">
         <header>
             <h1>Deadlock Patch Notes</h1>
@@ -140,6 +141,7 @@
         </footer>
     </div>
 
+    <script src="dark-mode.js"></script>
     <script src="deadlock.js"></script>
 </body>
 </html>
