--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     <div class="container">
         <header>
             <h1>Pokey's Gamer Information Playground</h1>
@@ -49,5 +50,6 @@
             <p>Made with ❤️ by Pokey | Last Updated: November 2025</p>
         </footer>
     </div>
+    <script src="dark-mode.js"></script>
 </body>
 </html>
