--- a/magicdeckbuilder.html
+++ b/magicdeckbuilder.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="magicdeckbuilder.css">
 </head>
 <body>
+    <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     <div class="container">
         <header>
             <h1>Magic: The Gathering Deck Builder</h1>
